More fixes to config.py and updates to cmd_line.py
- config.py now works when no setup.cfg file can be found
- removed a bunch of old stuff from cmd_line and it should now be working again

--- a/src/pyvxl/setup.cfg
+++ b/src/pyvxl/setup.cfg
@@ -1,6 +1,10 @@
 [pyvxl]
-CAN_1 = 1
+CAN_CHANNEL_1 = 2
+CAN_BAUD_RATE_1 = 500000
 DBC_PATH_1 = ''
-CAN_2 = 2
+
+CAN_CHANNEL_2 = 3
+CAN_BAUD_RATE_2 = 500000
 DBC_PATH_2 = ''
-CAN_BAUD_RATE = 500000
+
+LIN_CHANNEL_1 = 1
